// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Table with defaultColumnOptions should allow column-specific options to override defaults 1`] = `
"┌────┬────────┬───────┐
│[37m [0m[01mid[0m │[37m [0m[01m  name[0m │[37m [0m[01mvalue[0m │
├────┼────────┼───────┤
│[37m [0m[32m1 [0m │[37m [0m[34mItem 1[0m │[37m [0m[32m  100[0m │
│[37m [0m[32m2 [0m │[37m [0m[34mItem 2[0m │[37m [0m[32m  200[0m │
└────┴────────┴───────┘"
`;

exports[`Table with defaultColumnOptions should apply default column options to all columns 1`] = `
"┌────┬────────┬───────┐
│[37m [0m[01mid[0m │[37m [0m[01m  name[0m │[37m [0m[01mvalue[0m │
├────┼────────┼───────┤
│[37m [0m[32m 1[0m │[37m [0m[32mItem 1[0m │[37m [0m[32m  100[0m │
│[37m [0m[32m 2[0m │[37m [0m[32mItem 2[0m │[37m [0m[32m  200[0m │
└────┴────────┴───────┘"
`;

exports[`Table with defaultColumnOptions should work with no column definitions 1`] = `
"┌────┬────────┬───────┐
│[37m [0m[01mid[0m │[37m [0m[01m  name[0m │[37m [0m[01mvalue[0m │
├────┼────────┼───────┤
│[37m [0m[33m 1[0m │[37m [0m[33mItem 1[0m │[37m [0m[33m  100[0m │
│[37m [0m[33m 2[0m │[37m [0m[33mItem 2[0m │[37m [0m[33m  200[0m │
└────┴────────┴───────┘"
`;
